@@ -9,7 +9,7 @@
         <tr>
             {% for column in table_header %}
             {% with forloop.counter0 as col_index %}
-                <th {% cell_classname 0 col_index %}>
+                <th scope="col" {% cell_classname 0 col_index %}>
                     {% if column.strip %}
                         {% if html_renderer %}
                             {{ column.strip|safe|linebreaksbr }}
@@ -30,7 +30,7 @@
             {% for column in row %}
             {% with forloop.counter0 as col_index %}
                 {% if first_col_is_header and forloop.first %}
-                    <th {% cell_classname row_index col_index table_header %}>
+                    <th scope="row" {% cell_classname row_index col_index table_header %}>
                         {% if column.strip %}
                             {% if html_renderer %}
                                 {{ column.strip|safe|linebreaksbr }}
